--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+   <head><h1>Links</h1></head>
    <body>
       <a href="https://projectagm.github.io/calculation/index.html>Room to window calculation</a>
   </body>
