--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
    <head><h1>Links</h1></head>
    <body>
       <a href="https://projectagm.github.io/calculation/index.html>Room to window calculation</a>
+      <h1>Links</h1>
   </body>
 </html>
