--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
    <head><h1>Links</h1></head>
    <body>
       <h1>Links</h1>
+      <a href="https://www.w3schools.com">Visit W3Schools.com!</a>
       <a href="https://projectagm.github.io/calculation/index.html>Room to window calculation</a>
   </body>
 </html>
