--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-   <head><h1>Links</h1></head>
+   <head></head>
    <body>
       <h1>Links</h1>
       <a href="https://projectagm.github.io/calculation/index.html">Room to window calculation</a>
