--- a/calculation/index.html
+++ b/calculation/index.html
@@ -6,11 +6,11 @@
   </head>
   <script src="main.js" charset="utf-8"></script>
   <body>
-    Floor Area: <input type="text" id="floor"><br>
-    Window Height: <input type="text" id="wdHg"><br>
-    Window Width: <input type="text" id="wdWd"><br>
-    Frame Height: <input type="text" id="fmHg"><br>
-    Frame Width: <input type="text" id="fmWd"><br>
+    Floor Area: <input type="number" id="floor"><br>
+    Window Height: <input type="number" id="wdHg"><br>
+    Window Width: <input type="number" id="wdWd"><br>
+    Frame Height: <input type="number" id="fmHg"><br>
+    Frame Width: <input type="number" id="fmWd"><br>
     <button type="button" id="button" onclick="calc()">Calculate</button><br>
     <script type="text/javascript">
       function calc() {
