--- a/calculation/index.html
+++ b/calculation/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <p>© Ulrich Barnstedt 2018</p><br>
   </head>
   <script src="main.js" charset="utf-8"></script>
   <body>
