--- a/calculation/index.html
+++ b/calculation/index.html
@@ -19,6 +19,12 @@
         document.getElementById("output").innerHTML = JSON.stringify(mainOut);
       };
     </script>
-    <p id="output"><p>
+    <p id="output"><p><br>
+    <p>Output:<br>
+      areaWindow : Area of the window<br>
+      areaFrame : Area of the frame<br>
+      areaFloor : Area of the floor (same as Floor Area input)<br>
+      areaDiffWin : Window area divided by Frame Area<br>
+      areaDiffFlr : Window area (not including Frame area) divided by Floor Area<br>
   </body>
 </html>
