--- a/calculation/index.html
+++ b/calculation/index.html
@@ -7,12 +7,12 @@
   </head>
   <script src="main.js" charset="utf-8"></script>
   <body>
-    Floor Area: <input type="number" id="floor"><br>
+    <font>Floor Area: <input type="number" id="floor"><br>
     Window Height: <input type="number" id="wdHg"><br>
     Window Width: <input type="number" id="wdWd"><br>
     Frame Height: <input type="number" id="fmHg"><br>
     Frame Width: <input type="number" id="fmWd"><br>
-    <button type="button" id="button" onclick="calc()">Calculate</button></p><br>
+    <button type="button" id="button" onclick="calc()">Calculate</button><br></font>
     <script type="text/javascript">
       function calc() {
         var mainOut = main(document.getElementById("wdHg").value,document.getElementById("wdWd").value,document.getElementById("fmHg").value,document.getElementById("fmWd").value,document.getElementById("floor").value);
