--- a/calculation/index.html
+++ b/calculation/index.html
@@ -12,7 +12,7 @@
     Window Width: <input type="number" id="wdWd"><br>
     Frame Height: <input type="number" id="fmHg"><br>
     Frame Width: <input type="number" id="fmWd"><br>
-    <button type="button" id="button" onclick="calc()">Calculate</button><br></font>
+    <button type="button" id="button" onclick="calc()" style="width:100px;height:100px">Calculate</button><br></font>
     <script type="text/javascript">
       function calc() {
         var mainOut = main(document.getElementById("wdHg").value,document.getElementById("wdWd").value,document.getElementById("fmHg").value,document.getElementById("fmWd").value,document.getElementById("floor").value);
