Added Link to DQB

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
    <head></head>
    <body>
       <h1>Links</h1>
-      <a href="https://projectagm.github.io/calculation/index.html">Room to window calculation</a>
+      <a href="https://projectagm.github.io/calculation/index.html">Room to window calculation</a><br>
+      <a href="https://projectagm.github.io/bot/DQB/index.html">DQB Discord Bot (WIP)</a><br>
   </body>
 </html>
