--- a/bot/DQB/index.html
+++ b/bot/DQB/index.html
@@ -8,12 +8,12 @@
     Available Bots:
     <p>
       Database Query Bot (WIP):
-      <a href="https://discordapp.com/oauth2/authorize?client_id=546602867704856582&scope=bot&permissions=523336">Link</a>
+      <a href="https://discordapp.com/oauth2/authorize?client_id=546602867704856582&scope=bot&permissions=523336">Link</a><br><br>
       
-      (c) Ulrich Barnstedt 2019 All rights reserved.
-      [Database Query Bot] DQB v2.7
-      [Discord Command Interpetation Engine] DCIE 1.3
-      [Hentai Query Engine] HQE 1.1
+      (c) Ulrich Barnstedt 2019 All rights reserved. <br>
+      [Database Query Bot] DQB v2.7 <br>
+      [Discord Command Interpetation Engine] DCIE 1.3 <br>
+      [Hentai Query Engine] HQE 1.1 <br>
       <br>
     </p>
   </body>
