--- a/mc/1710mp/index.html
+++ b/mc/1710mp/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     A modpack for Minecraft 1.7.10. Contains ~70 mods. Is not finished and may bug/glitch/not work at all. Configs are still to be updated.<br>
-     Link to zip: <a href="https://projectagm.github.io/mc/1710mp/mods.zip">ZIP File</a><br><br>
+     Link to files: <a href="https://github.com/ProjectAGM/1.7.10-modpack/">Github Repository</a><br><br>
      Note: I do NOT own any of these mods. I do NOT take any credit for any of them. Most of them are availiable on <a href="minecraft.curseforge.com">minecraft.curseforge.com</a><br><br>
      ©2019 Ulrich Barnstedt All Rights Reserved
   </body>
