--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
       <a href="https://projectagm.github.io/calculation/index.html">Room to window calculation</a><br>
       <a href="https://projectagm.github.io/bot/DQB/index.html">DQB Discord Bot (WIP)</a><br>
       <a href="https://projectagm.github.io/mc/1710mp/index.html">1.7.10 minecraft Modpack</a><br>
+      <a href="https://projectagm.github.io/projects/gam-gen/index.html">GAM-gen Project</a><br>
   </body>
 </html>
