--- a/codeworks/rjs/index.html
+++ b/codeworks/rjs/index.html
@@ -5,7 +5,7 @@
     <title>RJS Codeworks</title>
   </head>
   <body>
-    RJS Coderworks is an Github owned by me. I host some of my projects on it. <br>
+    RJS Coderworks is an Github organization owned by me. I host some of my projects on it. <br>
     <a href="#">Link</a><br><br>
     © Ulrich Barnstedt 2019
   </body>
