Fixed link again

--- a/codeworks/rjs/index.html
+++ b/codeworks/rjs/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     RJS Coderworks is an Github organization owned by me. I host some of my projects on it. <br>
-    <a href="rjs-codeworks.github.io">Link</a><br><br>
+    <a href="https://rjs-codeworks.github.io/">Link</a><br><br>
     © Ulrich Barnstedt 2019
   </body>
 </html>
