--- a/bot/DQB/index.html
+++ b/bot/DQB/index.html
@@ -5,6 +5,10 @@
     <title>Discord Bots</title>
   </head>
   <body>
+    <p>
+      Page removed.
+    </p>
+    <!--
     Available Bots:
     <p>
       Database Query Bot (WIP):
@@ -16,5 +20,6 @@
       [Hentai Query Engine] HQE 1.1 <br>
       <br>
     </p>
+  -->
   </body>
 </html>
